changes to design of all pages

--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "ckeditor5": "^44.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "entities": "^6.0.0",
     "firebase": "^11.4.0",
     "lucide-react": "^0.469.0",
