--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
+    "react-share": "^5.2.2",
     "react-toastify": "^11.0.2",
     "redux-persist": "^6.0.0",
     "slugify": "^1.6.6",
