--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
