--- a/api/vercel.json
+++ b/api/vercel.json
@@ -17,27 +17,12 @@
                 "DELETE",
                 "PATCH",
                 "OPTIONS"
-            ]
-            
-        }
-    ],
-    "headers": [
-        {
-        "source": "/api/(.*)",
-        "headers": [
-            {
-            "key": "Access-Control-Allow-Origin",
-            "value": "https://blog.isharankumar.com" 
-            },
-            {
-            "key": "Access-Control-Allow-Credentials",
-            "value": "true"
-            },
-            {
-                "key": "Access-Control-Allow-Headers",
-                "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+            ],
+            "headers": {
+                "Access-Control-Allow-Origin": "*",
+                "Access-Control-Allow-Credentials": "true",
+                "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
             }
-        ]
         }
     ]
-}        
+}
