--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^2.2.0",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
